--- a/scss/_06_header.scss
+++ b/scss/_06_header.scss
@@ -18,14 +18,11 @@ $corners_dimension: $corners_distance*1.3;
   position: relative;
   font-weight: 300;
   font-size: $header_font_size;
-  line-height: 1;
+  line-height: 1.25;
 
   h1{
     font-size: $header_font_size;
-    @include media( "screen", ">minWidth" ) {
-      font-size: calc(2.75vw + 14px);
-      line-height: 1;
-    }
+    line-height: 1.25;
   }
 
   ul{ list-style: none; }
@@ -85,7 +82,7 @@ $corners_dimension: $corners_distance*1.3;
   @include media( "screen", ">minWidth") {
     bottom: $corners_distance;
     text-align: right;
-    line-height: 1.2;
+    line-height: 1.25;
   }
   // style for active page
   .active a{color: black;}
